# partsim

./: CMakeLists.txt  README.md  main.c  particle.h  run.bat
glad/include/glad/: glad.h
glad/src/: glad.c
